# django-drf-firebase-auth

./: LICENSE  README.md  setup.cfg
django_drf_firebase_auth/: apps.py  authentication.py
